# petcare

./: .env.docker.example  .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  turbo.json
apps/backend/: .dockerignore  .env.example  BACKEND_README.md  Dockerfile  Makefile  alembic.ini  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py  1d7f3c8b9a2e_link_animal_breeds_to_types.py  2f6b8c1d4e9a_make_dog_animal_type_id_first.py  32f1bf8ecb99_update_dog_friendly_places_table.py  34c612ec2c36_add_auth_provider_table.py  3a7d1e5c9b2f_force_dog_animal_type_id_to_1.py  3ae998d30070_add_to_llm_chats_and_messages.py  3de7b33dbfe2_update_llmchat.py  4773b39cfdbb_update_dog_friendly_and_vets.py  4b0d8f89c1e9_rename_pet_photo_to_pet_photo_object_key.py  55e00d599145_update_llm_tables.py  57adcc7b665c_initial.py  59c8d8ad63ce_upgrade_breeds.py  5b0f8d4a7c21_recover_map_schema_before_salons.py  64b1204ff4e4_update_salons.py  6b2e9d4f1a7c_make_pet_photo_optional.py  6c64d3aa923c_add_salons.py  6d5f2e7b1c4a_fix_llm_messages_chat_fk.py  76c2a1766596_add_refresh_tokens_table.py  76c2a1766596_addded_refresh_token.py  7c3d9a2f1b6e_drop_original_filename_from_pet_documents.py  7e2f4a1c9b3d_expand_animal_breed_length_to_100.py  8c4f1b7d2e6a_make_user_photo_optional.py  921c0605b450_fix_to_llm_chats_and_messages.py  93f77a4fbcd3_update_pets.py  9ded3226e584_better_table_for_auth.py  9e11ca1f588d_add_telegram_fields_to_users_info.py  a6c1e8b6d2f4_align_schema_with_models.py  ab3d7f2c9e41_restore_custom_name_in_pet_documents.py  b2bc761f460a_add_pet_invite_table.py  c1f4e2b7a9d8_merge_heads_after_llm_and_documents.py  c3f8e2c71a4b_add_pet_photo_metadata_to_pets_info.py  ca8a7eebe4c4_add_llm_chat_model.py  d4c8e1a9b2f7_add_default_pet_document_types.py  da3d817a5e07_upgrade_dogfriendly_and_add_place_types.py  e1f4c2b9a7d3_expand_pet_documents.py  e8b4c2d1f9a6_rename_vet_passport_document_type.py  ec43268b0a8e_update_vet_clinics_table.py  ec43268b0a8e_update_vetclinics_table.py  f0f5a33d143e_upgrade_breeds_2.py  (+5 more)
apps/backend/app/: __init__.py  main.py  models.py
apps/backend/app/domain/: users.py
apps/backend/app/domains/: users.py
apps/backend/app/routers/: __init__.py  health.py  items.py
apps/backend/app/schemas/: __init__.py  pets.py  users.py
apps/backend/src/: exceptions.py  main.py  pet_measurements.py  sharing_active.py
apps/backend/src/api/: __init__.py  animals.py  auth.py  llm_chat.py  map.py  pet_documents.py  pet_photos.py  pets.py  router.py  sharing.py  upload_data.py  users.py  vet_clinics.py
apps/backend/src/bot/: constants.py  flows.py  formatters.py  keyboards.py  main.py  queries.py  selected_pet.py  states.py  telegram_media.py  texts.py  utils.py
apps/backend/src/clients/: mcp_client.py
apps/backend/src/core/: __init__.py  config.py  db.py  phone.py  prompt_loader.py  security.py
apps/backend/src/geocoder/: geocoder.py
apps/backend/src/mcp-server/: Makefile  README.md  pyproject.toml  requirements.txt
apps/backend/src/models/: AnimalBreed.py  AnimalPedigree.py  AnimalType.py  AuthIdentities.py  CustomDocumentName.py  DocumentType.py  DogfriendlyPlace.py  GroomingSalon.py  LlmChat.py  LlmChatMessage.py  LlmMessages.py  PetDocument.py  PetInfo.py  PetInvite.py  PlaceType.py  RefreshToken.py  SharedUser.py  SmartDiet.py  SuitableDogfriendlyPlace.py  SuitableVetClinic.py  UserInfo.py  VetClinic.py  __init__.py  animal_breed.py  animal_pedigree.py  animal_type.py  document_type.py  dogfriendly_place.py  pet_document.py  pet_info.py  shared_user.py  smart_diet.py  suitable_dogfriendly_place.py  suitable_vet_clinic.py  user_info.py  vet_clinic.py
apps/backend/src/repositories/: __init__.py  llm_chat.py  llm_message.py  pets.py  sharing.py  users.py
apps/backend/src/schemas/: __init__.py  animals.py  (+9 more)
apps/backend/tests/: test_health.py  test_items.py
(+225 files in other folders)
