[project]
name = "monorepo"
version = "0.1.0"
description = "Monorepo Python workspace root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/backend"]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
