# Основная конфигурация проекта
[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
# Минимальная версия Python для проекта
requires-python = ">=3.12"
# Обязательные зависимости для работы приложения
dependencies = [
    "fastapi>=0.115.0",  # Веб-фреймворк для создания API
    "uvicorn[standard]>=0.32.0",  # ASGI сервер для запуска приложения
    "pydantic>=2.10.0",  # Валидация данных и сериализация
    "httpx>=0.28.0",  # HTTP клиент для асинхронных запросов
]

# Дополнительные зависимости для разработки и тестирования
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",  # Фреймворк для написания и запуска тестов
    "pytest-asyncio>=0.24.0",  # Поддержка асинхронных тестов в pytest
    "httpx>=0.28.0",  # HTTP клиент для тестирования API
    "ruff>=0.8.0",  # Быстрый линтер и форматер кода на Python
]

# Конфигурация системы сборки пакета
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Конфигурация сборки колеса (wheel) пакета
[tool.hatch.build.targets.wheel]
packages = ["app"]

# Конфигурация pytest для запуска тестов
[tool.pytest.ini_options]
asyncio_mode = "auto"  # Автоматически запускать асинхронные тесты
testpaths = ["tests"]  # Директория с тестами

# Конфигурация линтера и форматера Ruff
[tool.ruff]
line-length = 88  # Максимальная длина строки кода
target-version = "py312"  # Целевая версия Python

# Правила линтирования Ruff
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]  # Включённые категории ошибок
ignore = ["E501"]  # Игнорировать ошибку о длинных строках (контролируется выше)
