[project]
name = "petcare-mcp-server"
version = "0.1.0"
description = "PetCare MCP HTTP service with DB, storage and assistant tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "fastmcp",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "PyJWT>=2.10.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-json-report>=1.5.0",
  "ruff>=0.8.0",
]

[project.scripts]
petcare-mcp = "app.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
